Fix messages display on Safari (#132)

--- a/src/website/css/index.css
+++ b/src/website/css/index.css
@@ -456,6 +456,7 @@ main header>div >div {
 .detail .day-container {
     display: flex;
     flex-direction: column;
+    flex-shrink: 0;
 }
 
 .message.me {
